--- a/thakur-portfolio/package.json
+++ b/thakur-portfolio/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scroll": "^1.9.0",
+    "react-simple-typewriter": "^5.0.1",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.7",
     "three": "^0.167.1"
