--- a/thakur-portfolio/package.json
+++ b/thakur-portfolio/package.json
@@ -19,8 +19,10 @@
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-particlezz-js": "^1.0.1",
     "react-scroll": "^1.9.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-use": "^17.5.1",
     "styled-components": "^6.1.12",
     "tailwindcss": "^3.4.7",
     "three": "^0.167.1"
